# musica-cpp

./: .gitignore  BottomBar.cpp  BottomBar.h  CMakeLists.txt  ClickedLabel.cpp  ClickedLabel.h  DownloadPage.cpp  FavoritePage.cpp  ItemSong.cpp  ItemSong.h  LeftMenus.cpp  LeftMenus.h  MainWindow.cpp  NetworkImage.cpp  README.md  SearchPage.cpp  SearchPage.h  Song.cpp  Song.h  Toast.cpp  Toast.h  TopBar.cpp  TopBar.h  assets.qrc  constants.h  left_menus.cpp  left_menus.h  main.cpp  main_window.cpp  musica-cpp.pro  search_result.json  style.qss
assets/qss/: style.qss
qss/: style.qss
src/: connection.h  constants.h  main.cpp
src/components/: BottomBar.cpp  BottomBar.h  ClickedLabel.cpp  ClickedLabel.h  ItemSong.cpp  ItemSong.h  LeftMenus.cpp  LeftMenus.h  NetworkImage.cpp  NetworkImage.h  TopBar.cpp  TopBar.h  VolumeButton.cpp  VolumeButton.h  VolumeSlider.cpp  VolumeSlider.h  playlist.cpp  playlist.h
src/db/: database.cpp  database.h
src/models/: Song.cpp  Song.h
src/pages/: DownloadPage.cpp  DownloadPage.h  FavoritePage.cpp  FavoritePage.h  MainWindow.cpp  MainWindow.h  SearchPage.cpp  SearchPage.h
src/utils/: CommonUtil.cpp  CommonUtil.h
templates/: search_result.json
tools/: CommonUtils.cpp  CommonUtils.h
utils/: CommonUtil.cpp
widgets/: BottomBar.cpp  BottomBar.h  DownloadPage.cpp  DownloadPage.h  FavoritePage.h  ItemSong.cpp  ItemSong.h  LeftMenus.cpp  MainWindow.cpp  MainWindow.h  SearchPage.cpp  SearchPage.h  TopBar.h  VolumeButton.cpp  VolumeButton.h  VolumeSlider.cpp  VolumeSlider.h
